aks/manifests/09/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-c-trouble
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
